# mf

./: .gitignore  Cargo.toml  RELEASE_CHECKLIST.md  abc.toml  readme.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benches/: mf_benchmarks.rs
src/: args.rs  clipboard.rs  config.rs  conflict.rs  content_type.rs  content_type.rs.backup  encoding.rs  error.rs  file_ops.rs  lib.rs  main.rs  ui.rs
src/platform/: mod.rs
